TimeScheduleActivity TimeScheduleFragment add

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,6 @@
     <color name="blackColor">#000</color>
 
 
-    <color name="pinkSunday">#ffc9d2</color>
+    <color name="pinkToday">#ffc9d2</color>
 
 </resources>
