--- a/app/src/main/res/layout/calendar_cell.xml
+++ b/app/src/main/res/layout/calendar_cell.xml
@@ -35,6 +35,14 @@
             android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toStartOf="@+id/dateText" />
 
+        <TextView
+            android:id="@+id/textViewGone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/dateText" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
