--- a/app/src/main/res/layout/fragment_schedule_form.xml
+++ b/app/src/main/res/layout/fragment_schedule_form.xml
@@ -15,7 +15,7 @@
         android:id="@+id/formTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/tvFormTitleDefault"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +152,7 @@
                 android:text="@string/tvScheTitle" />
 
             <EditText
-                android:id="@+id/editTextScheTItle"
+                android:id="@+id/editTextScheTitle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:ems="10"
@@ -177,10 +177,10 @@
                 android:minLines="3" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/saveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="@string/saveButton" />
 
         </LinearLayout>
 
