ReName Activity Fragment implement returnButton

--- a/app/src/main/res/layout/activity_month_calendar.xml
+++ b/app/src/main/res/layout/activity_month_calendar.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/preAndNextFragment"
-        android:name="to.msn.wings.calendarrecyclerview.PreAndNextMonthCalendarFragment"
+        android:name="to.msn.wings.calendarrecyclerview.MonthCalendarFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
