--- a/app/src/main/res/layout/fragment_schedule_form.xml
+++ b/app/src/main/res/layout/fragment_schedule_form.xml
@@ -154,11 +154,12 @@
             <EditText
                 android:id="@+id/editTextScheTitle"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textMultiLine"
                 android:maxLines="5"
-                android:minLines="2" />
+                android:minLines="2"
+                android:maxLength="100"/>
 
             <TextView
                 android:id="@+id/tvScheMemo"
@@ -174,7 +175,8 @@
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
                 android:maxLines="10"
-                android:minLines="3" />
+                android:minLines="3"
+                android:maxLength="200"/>
 
             <Button
                 android:id="@+id/saveButton"
