--- a/app/src/main/res/layout/fragment_schedule_form.xml
+++ b/app/src/main/res/layout/fragment_schedule_form.xml
@@ -142,7 +142,30 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_weight="1"
+                    android:entries="@array/spinnerEndMinutes"
                      />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewHourError"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/redColor"/>
+
+                <TextView
+                    android:id="@+id/textViewMinutesError"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/redColor"/>
             </LinearLayout>
 
             <TextView
