--- a/app/src/main/res/layout/time_schedule_list_item.xml
+++ b/app/src/main/res/layout/time_schedule_list_item.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="20sp"
+            android:clickable="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/time" />
 
