--- a/app/src/main/res/layout/time_schedule_list_item.xml
+++ b/app/src/main/res/layout/time_schedule_list_item.xml
@@ -39,6 +39,7 @@
             android:text="TextView"
             android:textSize="20sp"
             android:clickable="true"
+            android:paddingBottom="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/time" />
 
@@ -47,7 +48,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
-            android:textSize="13sp"
+            android:textSize="12sp"
+            android:paddingBottom="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scheduleTitle" />
 
