schedule editBtn  deleteBtn TimeScheduleListAdapter setMinimumWidth setWidth

--- a/app/src/main/res/layout/fragment_schedule_form.xml
+++ b/app/src/main/res/layout/fragment_schedule_form.xml
@@ -22,21 +22,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <Button
-        android:id="@+id/returnMonButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="○月カレンダーへ戻る"
-        app:layout_constraintEnd_toStartOf="@+id/currentMonButton"
-        app:layout_constraintTop_toBottomOf="@+id/formTitle" />
+        <Button
+            android:id="@+id/returnMonButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="○月カレンダーへ戻る"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toStartOf="@+id/currentMonButton"
+            app:layout_constraintTop_toBottomOf="@+id/formTitle" />
 
-    <Button
-        android:id="@+id/currentMonButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="今月のカレンダーに戻る"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/formTitle" />
+        <Button
+            android:id="@+id/currentMonButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="今月カレンダーに戻る"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/formTitle" />
 
 
         <LinearLayout
