--- a/app/src/main/res/layout/fragment_schedule_form.xml
+++ b/app/src/main/res/layout/fragment_schedule_form.xml
@@ -209,6 +209,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/saveButton" />
 
+            <Button
+                android:id="@+id/deleteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete" />
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
