--- a/app/src/main/res/layout/fragment_month_calendar.xml
+++ b/app/src/main/res/layout/fragment_month_calendar.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="次の月"
-        app:layout_constraintEnd_toStartOf="@+id/currentButton"
+        app:layout_constraintEnd_toStartOf="@+id/currentMonthButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/prevButton"
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
